apps-manual/eastwest/trafficgen.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trafficgen
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trafficgen
  namespace: trafficgen
  labels:
    app: trafficgen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trafficgen
  template:
    metadata:
      labels:
        app: trafficgen
    spec:
      containers:
        - name: trafficgen
          image: appropriate/curl
          args:
            - /bin/sh
            - -c
            - |
              while :; do
                curl -H "X-B3-Sampled: 1" http://productpage.bookinfo:9080/productpage 
                sleep 10
              done
