apps-manual/eastwest/03-eastwest-gateway.yaml
apiVersion: install.tetrate.io/v1alpha1
kind: Gateway
metadata:
  name: eastwest-gateway
  namespace: bookinfo
spec:
  type: EASTWEST
  kubeSpec:
    service:
      type: LoadBalancer
